Polished up module files

--- a/src/template.html
+++ b/src/template.html
@@ -1,5 +1,7 @@
 <div style="font-family: -apple-system, BlinkMacSystemFont, sans-serif;">
 
+  <h3>Here's the contact form submission:</h3>
+
   <p>
     <strong>Name</strong>
     <br>
